trunk/Archive2/1d/fa11bb6692eee8/output
main.cpp: In function 'int main()':
main.cpp:16:28: error: no matching function for call to 'fun(<unresolved overloaded function type>, int, const char [4], double)'
     fun(foo, 42, "abc", 3.5);
                            ^
main.cpp:16:28: note: candidate is:
main.cpp:5:6: note: template<class F, class ... Ts> void fun(F, Ts&& ...)
 void fun(F f, Ts&&...args)
      ^
main.cpp:5:6: note:   template argument deduction/substitution failed:
main.cpp:16:28: note:   couldn't deduce template parameter 'F'
     fun(foo, 42, "abc", 3.5);
                            ^
